tests/ui/invalid_pymodule_args.stderr
error: expected one of: `name`, `crate`, `module`, `submodule`, `gil_used`
 --> tests/ui/invalid_pymodule_args.rs:3:12
  |
3 | #[pymodule(some_arg)]
  |            ^^^^^^^^

error: `gil_used` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:9:36
  |
9 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                    ^^^^^^^^

error: `name` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:9:67
  |
9 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                                                   ^^^^

error: `gil_used` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:16:36
   |
16 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                    ^^^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:16:67
   |
16 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                                                   ^^^^

error: aborting due to 5 previous errors

